Server-side slot interaction